--- a/css/style.css
+++ b/css/style.css
@@ -10,18 +10,54 @@
   border: 0;
   font-size: 12px; }
 
+li {
+  list-style-type: none; }
+
 html, body {
+  overflow: hidden;
   height: 100%;
   font-family: Roboto Slab, sans-serif; }
 
-a {
-  font-size: 50px; }
-  a:link, a:visited {
-    color: #000;
-    text-decoration: none;
-    cursor: auto; }
-  a:link:active, a:visited:active {
-    color: #000; }
+a:link, a:visited {
+  color: #000;
+  text-decoration: none;
+  cursor: auto; }
+a:link:active, a:visited:active {
+  color: #000; }
+
+#btn-addtable {
+  font-weight: 400;
+  font-size: 30px;
+  background: #2DBDFC;
+  text-align: center;
+  line-height: 50px;
+  position: fixed;
+  height: 50px;
+  width: 50px;
+  top: 200px;
+  left: 800px;
+  cursor: pointer;
+  -webkit-border-radius: 999em; }
+
+#popup {
+  position: fixed;
+  top: 200px;
+  padding: 20px;
+  left: 40%;
+  margin-left: auto;
+  margin-right: auto;
+  height: auto;
+  width: auto;
+  background: #fff;
+  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
+  -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
+  -webkit-border-radius: 0.2em; }
+  #popup ul {
+    padding: 0; }
+    #popup ul li {
+      font-size: 24px;
+      width: 300px; }
 
 header {
   position: fixed;
@@ -29,72 +65,158 @@ header {
   left: 0;
   background: #fff;
   width: 100%;
-  height: 60px;
-  max-height: 80px;
-  box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.13); }
+  height: 80px;
+  -webkit-box-shadow: 0 3px 5px rgba(0, 0, 0, 0.13);
+  -moz-box-shadow: 0 3px 5px rgba(0, 0, 0, 0.13);
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.13); }
   header .nav-bars {
-    padding-top: 10px;
+    line-height: 80px;
     padding-left: 20px; }
     header .nav-bars #title {
+      color: #2e2e2e;
       font-size: 30px;
-      font-weight: 100; }
+      font-weight: 300; }
       header .nav-bars #title:hover {
         color: #337ab7; }
     header .nav-bars .right-block {
       float: right;
       width: auto;
-      margin-top: 12px;
-      margin-right: 20; }
+      margin-right: 50px; }
       header .nav-bars .right-block li {
         display: inline; }
         header .nav-bars .right-block li a {
-          margin-right: 15px;
+          color: #c6c6c6;
+          margin-right: 20px;
           font-size: 12px; }
 
-#wrapper {
-  height: 500px;
-  margin-right: 100px;
-  margin-left: 100px;
-  margin-top: 60px;
-  /*divide*/ }
-  #wrapper .right-container .section-header {
-    padding: 45px 25px 60px 25px; }
-    #wrapper .right-container .section-header h1 {
-      margin: 0;
-      color: #2e2e2e;
-      font-size: 49px;
-      line-height: 1em;
+.left-container {
+  font-family: Roboto Slab, sans-serif;
+  color: #7a7a7a;
+  background: #f2f2f2;
+  height: 100%;
+  width: 180px;
+  margin-top: 80;
+  float: left; }
+  .left-container .profile {
+    position: absolute;
+    margin-top: 80px;
+    height: 90px;
+    width: 180px; }
+    .left-container .profile .profile-image {
+      margin: 25px 0 0 15px;
+      overflow: hidden;
+      border-radius: 50%;
+      width: 50px;
+      height: 50px; }
+      .left-container .profile .profile-image img {
+        display: block;
+        height: 100%;
+        width: 100%;
+        min-width: 100%;
+        min-height: 100%; }
+    .left-container .profile .user-name {
+      font-size: 15px;
+      font-weight: 700;
+      float: left;
+      margin-left: 75px;
+      margin-top: -36px; }
+  .left-container .section-function {
+    margin-top: 170px;
+    height: 100%; }
+    .left-container .section-function ul {
+      padding: 0; }
+      .left-container .section-function ul li {
+        width: 155px;
+        height: 60px;
+        line-height: 60px;
+        float: right; }
+        .left-container .section-function ul li a {
+          color: #7a7a7a;
+          font-size: 17px;
+          font-weight: 700;
+          padding-left: 20px; }
+
+.test {
+  box-shadow: -4px 1px 3px #dcdcdc, -4px -1px 3px #dcdcdc;
+  background: #fbfcfc; }
+
+.right-container {
+  background: #fbfcfc;
+  height: 100%;
+  width: 100%;
+  margin-left: 180px;
+  margin-top: 80px; }
+  .right-container .section-header {
+    height: 90px;
+    border-bottom: 1px solid #f5f5f5;
+    -webkit-box-shadow: 0px 2px 10px #f8f9f9;
+    -moz-box-shadow: 0px 2px 10px #f8f9f9;
+    box-shadow: 0px 2px 10px #f8f9f9; }
+    .right-container .section-header .title-area {
+      width: auto;
+      height: 100%;
+      float: left; }
+      .right-container .section-header .title-area p {
+        width: auto;
+        padding: 10px 0 0 25px;
+        color: #2DBDFC;
+        font-size: 50px;
+        font-weight: 100;
+        text-align: left; }
+    .right-container .section-header .show-condition {
+      width: auto;
+      height: 100%;
+      font-size: 36px;
+      font-weight: 100;
+      float: left;
+      margin-left: 200px; }
+      .right-container .section-header .show-condition #number-all, .right-container .section-header .show-condition #number-empty {
+        font-size: 36px;
+        font-weight: 100;
+        line-height: 90px; }
+  .right-container .section-content .table {
+    overflow: hidden;
+    font-size: 12px;
+    height: auto;
+    width: 200px;
+    margin: 20px;
+    border: 1px solid #f5f5f5;
+    float: left;
+    -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.07);
+    -moz-box-shadow: 0 0 5px rgba(0, 0, 0, 0.07);
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.07); }
+    .right-container .section-content .table .table-spilt-top {
+      height: 40px;
+      width: 100%;
+      float: left;
+      background: #f4f4f4;
+      font-size: 30px;
       font-weight: 300;
       text-align: center; }
-  #wrapper .right-container .table {
-    float: left;
-    font-size: 12px;
-    position: relative;
-    height: 200px;
-    width: 250px;
-    margin-bottom: 10px;
-    margin-right: 10px;
-    padding: 25px;
-    border: 1px solid #f5f5f5;
-    box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.07); }
-    #wrapper .right-container .table ul {
-      width: 100%;
-      padding-left: 0px; }
-      #wrapper .right-container .table ul li {
-        list-style-type: none;
-        display: inline; }
-        #wrapper .right-container .table ul li div {
-          margin-right: 10px;
-          margin-bottom: 20px;
-          float: left;
-          font-size: 35px;
-          text-align: center;
-          border-bottom: 5px;
-          width: 45px;
-          height: 45px;
-          -webkit-border-radius: 100px;
-          background: #fff;
-          border: 10px #020202 solid; }
+    .right-container .section-content .table .table-spilt-bot {
+      height: auto;
+      width: auto;
+      float: left;
+      padding: 0 10px 0 10px; }
+      .right-container .section-content .table .table-spilt-bot ul {
+        width: 100%;
+        padding-left: 0px; }
+        .right-container .section-content .table .table-spilt-bot ul li {
+          list-style-type: none;
+          display: inline; }
+          .right-container .section-content .table .table-spilt-bot ul li div {
+            color: #c4c4c4;
+            width: 40px;
+            height: 40px;
+            margin: 10px;
+            float: left;
+            font-size: 20px;
+            text-align: center;
+            line-height: 40px;
+            border-bottom: 5px;
+            -webkit-border-radius: 100px;
+            background: #939393;
+            cursor: pointer; }
 
 #footer {
   position: absolute;
