--- a/css/style.scss
+++ b/css/style.scss
@@ -1,4 +1,9 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,500,700);
+@mixin box-shadows($horizontal, $vertical, $blur, $color) {
+    -webkit-box-shadow: $horizontal $vertical $blur $color;
+    -moz-box-shadow: $horizontal $vertical $blur $color;
+    box-shadow: $horizontal $vertical $blur $color;
+}
 
 /* @font-face {
   font-family: 'RS';
@@ -6,20 +11,24 @@
   font-size: 50px;
   src: url(http://fonts.googleapis.com/css?family=Roboto+Slab); }
  */
-
+//border-top: 1px solid #f5f5f5
 * {
   margin: 0;
   border: 0;
   font-size: 12px;
 }
 
+li {
+  list-style-type: none;
+}
+
 html, body {
+  overflow: hidden;
   height: 100%;
   font-family: Roboto Slab, sans-serif;
 }
 
 a {
-  font-size: 50px;
   &:link, &:visited {
     color: #000;
     text-decoration: none;
@@ -30,23 +39,60 @@ a {
   }
 }
 
+#btn-addtable{
+  font-weight: 400;
+  font-size: 30px;
+  background: #2DBDFC;
+  text-align: center;
+  line-height: 50px;
+  position: fixed;
+  height: 50px;
+  width: 50px;
+  top: 200px;
+  left: 800px;
+  cursor: pointer;
+  -webkit-border-radius: 999em;
+}
+
+#popup{
+      position: fixed;
+      top: 200px;
+      padding: 20px;
+      left: 40%;
+      margin-left: auto;
+      margin-right: auto;
+      height: auto;
+      width: auto;
+      background: #fff;
+      @include box-shadows(0, 0, 10px, rgba(0, 0, 0, 0.7));      
+      -webkit-border-radius: 0.2em;
+
+      ul{ 
+        padding: 0; 
+        li{
+          font-size: 24px;
+          width: 300px;
+        }
+      }
+
+}
+
 header {
   position: fixed;
   top: 0;
   left: 0;
   background: #fff;
   width: 100%;
-  height: 60px;
-  max-height: 80px;
-  box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.13);
+  height: 80px;
+  @include box-shadows(0, 3px, 5px, rgba(0, 0, 0, 0.13));
 
   .nav-bars{
-  	padding-top: 10px;
+    line-height: 80px;
     padding-left: 20px;
-
 	  #title {
+      color: #2e2e2e;
 	    font-size: 30px;
-	    font-weight: 100;
+	    font-weight: 300;
 	    &:hover {
 	      color: #337ab7;
 	    }
@@ -55,82 +101,184 @@ header {
 	  .right-block {
 	    float: right;
 	    width: auto;
-	    margin-top: 12px;
-	    margin-right: 20;
+      margin-right: 50px;
 	    li{
 		    display: inline;
 		    a{
-		    	margin-right: 15px;
+          color: #c6c6c6;
+		    	margin-right: 20px;
 		    	font-size: 12px;
 		    }
 	    }
 	  }    
-  }
+  }//.nav-bars
 }
 
 
+.left-container{
+  font-family: Roboto Slab, sans-serif;
+  color: #7a7a7a; //font color
+  background: #f2f2f2;
+  height: 100%;
+  width: 180px;
+  margin-top: 80;
+  float: left;
 
+  .profile{
+    position: absolute;
+    margin-top: 80px;
+    height: 90px;
+    width: 180px;
 
-#wrapper {
-  height: 500px;
-  margin-right: 100px;
-  margin-left: 100px;
-  margin-top: 60px;
-
-
-
-  /*divide*/
-  .left-container{
-
-  }
-  .right-container{
-    .section-header {
-      padding: 45px 25px 60px 25px;
-      h1 {
-        margin: 0;
-        color: #2e2e2e;
-        font-size: 49px;
-        line-height: 1em;
-        font-weight: 300;
-        text-align: center;
+    .profile-image{
+      //http://stackoverflow.com/questions/22577371/how-to-make-rectangular-image-appear-circular-with-css
+      margin: 25px 0 0 15px;
+      overflow: hidden;
+      border-radius: 50%;
+      width: 50px;
+      height: 50px;
+      img{
+        display: block;
+        height: 100%;
+        width: 100%;
+        min-width: 100%;
+        min-height: 100%;
       }
     }
-    .table {
+    .user-name{
+      font-size: 15px;
+      font-weight: 700;
       float: left;
-      font-size: 12px;
-      position: relative;
-      height: 200px;
-      width: 250px;
-      margin-bottom: 10px;
-      margin-right: 10px;
-      padding: 25px;
-      border: 1px solid #f5f5f5;
-      box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.07);
-      ul {
-        width: 100%;
-        padding-left: 0px;
-        li {
-          list-style-type: none;
-          display: inline;
-          div {
-            margin-right: 10px;
-            margin-bottom: 20px;
-            float: left;
-            font-size: 35px;
-            text-align: center;
-            border-bottom: 5px;
-            width: 45px;
-            height: 45px;
-            -webkit-border-radius: 100px;
-            background: #fff;
-            border: 10px #020202 solid;
-          }
+      margin-left: 75px;
+      margin-top: -36px;
+    }
+  }//profile
+
+  .section-function{
+    margin-top: 170px;
+    height: 100%;
+    ul{
+      padding: 0;
+      li{
+        width: 155px;
+        height: 60px;
+        line-height: 60px;
+        float: right;
+
+        a{
+          color: #7a7a7a;
+          font-size: 17px;
+          font-weight: 700;
+          padding-left: 20px;
         }
       }
     }
-  }
-
+  }//.section-function
 }
+
+.test{
+  box-shadow: -4px 1px 3px #dcdcdc, -4px -1px 3px #dcdcdc;
+  background: #fbfcfc;
+}
+
+
+.right-container{
+  background: #fbfcfc;
+  height: 100%;
+  width: 100%;
+  margin-left: 180px; //depend on .left-container's width
+  margin-top: 80px;
+
+  .section-header {
+    height: 90px;
+    border-bottom: 1px solid #f5f5f5;
+    @include box-shadows(0px, 2px, 10px, #f8f9f9);
+
+    .title-area{
+      width: auto;
+      height: 100%;
+      float: left;
+      p {
+        width: auto;
+        padding: 10px 0 0 25px;
+        color: #2DBDFC;
+        font-size: 50px;
+        font-weight: 100;
+        text-align: left;
+      }
+    }
+
+    .show-condition{
+      width: auto;
+      height: 100%;
+      font-size: 36px;
+      font-weight: 100;
+      float: left;
+      margin-left: 200px;  
+      #number-all, #number-empty{
+        font-size: 36px;
+        font-weight: 100;
+        line-height: 90px; 
+      }
+
+    }
+  }//.section-header
+
+  .section-content{
+    .table {
+      overflow: hidden;
+      font-size: 12px;
+      height: auto;
+      width: 200px;
+      margin: 20px;
+      border: 1px solid #f5f5f5;
+      float: left;
+      @include box-shadows(0, 0, 5px, rgba(0, 0, 0, 0.07));
+
+      .table-spilt-top{
+        height: 40px;
+        width: 100%;
+        float: left;
+        // background: #e8e8e8;
+        background: #f4f4f4;
+        font-size: 30px;
+        font-weight: 300;
+        text-align: center;
+      }
+
+      .table-spilt-bot{
+        height: auto;
+        width: auto;
+        float: left;
+        padding: 0 10px 0 10px;
+        ul {
+          width: 100%;
+          padding-left: 0px;
+          li {
+            list-style-type: none;
+            display: inline;
+            div {
+              color: #c4c4c4;
+              width: 40px;
+              height: 40px;
+              margin: 10px;
+              float: left;
+              font-size: 20px;
+              text-align: center;
+              line-height: 40px;
+              border-bottom: 5px;
+              -webkit-border-radius: 100px;
+              background: #939393;
+              cursor: pointer;
+              // border: 5px #939393 solid;
+            }
+          }
+        }        
+      }//.table-spilt-bot
+
+    }//.table
+  }
+}//.right-container
 
 #footer {
   position: absolute;
